--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,9 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
+body{
+  background-color: #E7EFF5 !important;
+}
 .App-link {
   color: #61dafb;
 }
