--- a/frontend/src/page/Login/login.css
+++ b/frontend/src/page/Login/login.css
@@ -1,39 +1,44 @@
 /* Login.css */
 label {
-    display: block;
-    margin-bottom: 1em;
-    display: flex;
-    text-align: start;
-  }
-  .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 100vh;
-  }
-  button{
+  display: block;
+  margin-bottom: 1em;
+  display: flex;
+  text-align: start;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
+}
+button {
   width: 150px;
   height: 50px;
   border-radius: 0;
-  background-color: #1A8FDD;
+  background-color: #1a8fdd;
   border: 0;
-  }
-  input{
-    height: 40px;
+}
+button:hover{
+  background-color: #0099ff;
+  scale: 1.1;
+}
+input {
+  height: 40px;
   border-radius: 5px;
   border: 1px solid black;
   width: 300px;
-  }
-  ::placeholder { /* Most modern browsers support this */
-    color: #D2D2D2 !important;
-  }
-  .nav-container .myAppBar {
-    transform: translateY(-100%); /* initially hidden */
-    transition: transform 0.5s ease; /* animation */
-    opacity: 0;
-  }
-  
-  .nav-container:hover .myAppBar {
-    transform: translateY(0%); /* visible when hovered */
-    opacity: 1;
-  }
+}
+::placeholder {
+  /* Most modern browsers support this */
+  color: #d2d2d2 !important;
+}
+.nav-container .myAppBar {
+  transform: translateY(-100%); /* initially hidden */
+  transition: transform 0.5s ease; /* animation */
+  opacity: 0;
+}
+
+.nav-container:hover .myAppBar {
+  transform: translateY(0%); /* visible when hovered */
+  opacity: 1;
+}
